min width on permenent bar to prevent overlap on min

--- a/src/css/interface.scss
+++ b/src/css/interface.scss
@@ -63,6 +63,7 @@ body{
         background: $dark-gray;
         height: 31px;
         margin-bottom: 10px;
+        min-width: 650px;
 
         *{
             color: $light-gray
